Fix maps on mobile

--- a/src/css/elections.less
+++ b/src/css/elections.less
@@ -206,6 +206,7 @@
 
       svg {
         min-height: 275px;
+        max-height: 300px;
         max-width: 100%;
       }
     }
